Bug 1670560 - Don't use the same thread pool for both decoding and waiting for the decode to complete. r=mattwoodrow

Unlikely to happen, but we could have exhausted all our thread in the decoder thread pool and be deadlock.

Differential Revision: https://phabricator.services.mozilla.com/D93202